--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -3,9 +3,9 @@
     <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
-    <a class="logo" href="#" (click)="navigateHome()">ngx-<span>admin</span></a>
+    <a class="logo" href="#" (click)="navigateHome()">Spinners</a>
   </div>
-  <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
+  <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary" class="hide">
     <nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>
   </nb-select>
   <ngx-layout-direction-switcher class="direction-switcher"></ngx-layout-direction-switcher>
@@ -13,7 +13,7 @@
 
 <div class="header-container">
   <nb-actions size="small">
-
+    
     <nb-action class="control-item">
       <nb-search type="rotate-layout"></nb-search>
     </nb-action>
